<resources>
    <string name="app_name">Secure Home</string>
    <string name="splash_logo_png">splash_logo.png</string>
    <string name="logo">logo</string>
    <string name="user_name">User Name</string>
    <string name="contact">Contact</string>
    <string name="building_name">Building name</string>
    <string name="flat_no">Flat no</string>
    <string name="i_accept_the_terms_of_use_privacy_policy"><![CDATA[I Accept the terms of use & Privacy policy]]></string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="enter_the_otp_sent_to_91_1234567890">Enter the OTP sent to +91 1234567890</string>
    <string name="verify">Verify</string>
    <string name="parthiv">Parthiv</string>
    <string name="user_profile">user_profile</string>
    <string name="visitor">Visitor</string>
    <string name="history">History</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notification">Notification</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="welcome_to_secure_home">Welcome to secure home</string>
    <string name="cancel_icon">cancel_icon</string>
    <string name="visitor_image">visitor_image</string>
    <string name="_7_46_pm">7:46 PM</string>
    <string name="_8_aug_2023">8 Aug 2023</string>
    <string name="_8_00_pm">8:00 PM</string>
    <string name="eye_icon">eye_icon</string>
    <string name="loading">Loading...</string>
    <string name="no_visitor_data_found_for_today">No visitor data found for today</string>
    <string name="back_button_icon">back_button_icon</string>
    <string name="new_visitor_xyz_arrived_at_gate">New visitor xyz arrived at gate</string>
    <string name="_11_aug_2023_10_55_am">11 aug 2023 10:55 AM</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ic_arrow_down_icon">ic_arrow_down_icon</string>
    <string name="upload">Upload</string>
    <string name="select">Select</string>
    <string name="ic_arrow_back_icon">ic_arrow_back_icon</string>
    <string name="profile">Profile</string>
    <string name="user_profile_image">user_profile_image</string>
    <string name="full_name">Full Name</string>
    <string name="update">Update</string>
    <string name="february">February</string>
    <string name="ic_arrow_back_black">ic_arrow_back_black</string>
    <string name="ic_arrow_forward">ic_arrow_forward</string>
    <string name="name">Name :</string>
    <string name="contact_">Contact :</string>
    <string name="_9586968062">9586968062</string>
    <string name="building_no">Building No :</string>
    <string name="e_1">E-1</string>
    <string name="_804">804</string>
    <string name="flat_no_">Flat No :</string>
    <string name="visit_date">Visit Date :</string>
    <string name="_16_02_2024">16/02/2024</string>
    <string name="in_time">In Time :</string>
    <string name="_10_00_pm">10:00 PM</string>
    <string name="out_time">Out Time :</string>
    <string name="person">Person :</string>
    <string name="_4">4</string>
    <string name="category">Category :</string>
    <string name="doctor">Doctor</string>
    <string name="vehicle_no">Vehicle No :</string>
    <string name="gj_05_jb_3581">GJ 05 JB 3581</string>
    <string name="this_is_the_grocery_delivery_man_and_he_is_going_to_parthiv_s_home_for_delivery">This is the grocery delivery man and he is going to parthiv\'s home for delivery.</string>
    <string name="remarks">Remarks :</string>
    <string name="home">Home</string>
    <string name="ic_menu_bar_icon">ic_menu_bar_icon</string>
    <string name="collecting_and_using_your_personal_data">Collecting and Using Your Personal Data</string>
    <string name="security_of_your_personal_data">Security of Your Personal Data</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_securehome_gmail_com">Email: securehome@gmail.com</string>
    <string name="select_building_no">Select building no</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="textview">TextView</string>
    <string name="user_icon">user_icon</string>
    <string name="phone_icon">phone_icon</string>
    <string name="logout">Logout</string>
    <string name="in_time_icon">in_time_icon</string>
    <string name="out_time_icon">out_time_icon</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_description">Notification description</string>

    <string-array name="building_name">
        <item>A-1</item>
        <item>A-2</item>
        <item>B-1</item>
        <item>B-2</item>
        <item>C-1</item>
        <item>C-2</item>
        <item>D-1</item>
        <item>D-2</item>
        <item>E-1</item>
        <item>E-2</item>
    </string-array>
</resources>