<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/visitor_bg_color"
    tools:context=".VisitorActivity">

    <!-- App bar -->
    <LinearLayout
        android:id="@+id/visitorAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_button_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/visitor"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <!-- This is text for no data found -->
    <TextView
        android:id="@+id/noDataTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/visitorAppBar"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/no_visitor_data_found_for_today"
        android:textSize="22sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/visitorDataRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/visitorAppBar"
        android:layout_marginTop="20dp" />

</RelativeLayout>