<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        android:layout_marginHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="20dp">

            <ImageView
                android:id="@+id/visitorImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/user"
                android:layout_gravity="center"
                android:contentDescription="@string/visitor_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/visitDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_8_aug_2023"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/in_time_icon" />

                        <TextView
                            android:id="@+id/visitInTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:text="@string/_7_46_pm"
                            android:textColor="@color/textColorLight"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/out_time_icon" />

                        <TextView
                            android:id="@+id/visitOutTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:text="@string/_8_00_pm"
                            android:textColor="@color/textColorLight"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/viewVisitorDataIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/view_data_icon"
                android:contentDescription="@string/eye_icon" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>
